template/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1  # set the number of desierd pods as 3
  selector:  # used to connect with pod
    matchLabels:
      app: auth
  template:  # define the pod
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: clytze/auth-service:v8
        ports:
        - containerPort: 7777
      #  env:
        #  - name: AUTH_USER_NAME
        #    valueFrom:
          #    secretKeyRef:
          ##      name: auth-secret
           #     key: auth-user
         # - name: AUTH_USER_PWD
         #   valueFrom:
          #    secretKeyRef: 
         #       name: auth-secret
          #      key: auth-pwd
         # - name: DB_URL
         #   valueFrom:
          #    configMapKeyRef: 
           #     name: mongo-config
          #      key: mongo-url
       
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 7777
      targetPort: 7777
  type: LoadBalancer
