template/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4.6
          ports:
          - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  # the type of service is defualt as ClusterIP with no external requests
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
