template/url.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-deployment
  labels:
    app: url
spec:
  replicas: 1   # set the number of desierd pods as 3
  selector:  # used to connect with pod
    matchLabels:
      app: url
  template:  # define the pod
    metadata:
      labels:
        app: url
    spec:
      containers:
      - name: url
        image: reisafriche/url-service:v5
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: url-service
spec:
  selector:
    app: url
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000   # targetport is lisening to the conatinerport
  type: LoadBalancer
